@startuml class
class GAS {
}

class local {
}


class OutputApiFactory {
  + create(): OutputApi
}

abstract OutputApi {
  + send(text: String): void
}

class OutputApi_Slack
class OutputApi_Console

OutputApi <|-- OutputApi_Slack
OutputApi <|-- OutputApi_Console
OutputApiFactory --> OutputApi

abstract CalendarApi
class CalendarApi_Google
class CalendarApi_Console

CalendarApi <|-- CalendarApi_Google
CalendarApi <|-- CalendarApi_Console



class SlackBot {
  + run()
}

GAS --> SlackBot
GAS --> OutputApiFactory
local --> SlackBot
local --> OutputApiFactory
SlackBot --> Action
Action --> OutputApi
Action --> CalendarApi

abstract Action {
  + match()
  + do()
}

Action <|-- Debug
Action <|-- Check
Action <|-- GymDone

class Json {
  + get()
}

@enduml